[metadata]
name = pysimconnect
version = 0.1.1
author = Patrick Surry
author_email = patrick.surry@gmail.com
description = Python wrapper for Microsoft FlightSimulator 2020 SimConnect SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/patricksurry/pysimconnect
project_urls =
    Bug Tracker = https://github.com/patricksurry/pysimconnect/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = simconnect
python_requires = >=3.6
install_requires =
    typer
    lunr

[options.entry_points]
console_scripts =
    simconnect = simconnect.cli:app [typer]

[options.package_data]
* = scvars.json, SimConnect.dll
